# crewai-mcp-demo

./: LICENSE.md  README.md  sse_client_demo.py  stdio_client_demo.py
mathematician_project/: README.md  pyproject.toml
mathematician_project/src/mathematician_project/: crew.py
mathematician_project/src/mathematician_project/config/: agents.yaml  tasks.yaml
output/: doc_answer.md
scaffolding_approach_examples/crewai_context7_mcp/: .env.example  README.md  pyproject.toml
scaffolding_approach_examples/crewai_context7_mcp/output/: show me code to build a competitive research crew with crewai_output.md
scaffolding_approach_examples/crewai_context7_mcp/src/crewai_context7_mcp/: crew.py  main.py
scaffolding_approach_examples/crewai_context7_mcp/src/crewai_context7_mcp/config/: agents.yaml  tasks.yaml
scaffolding_approach_examples/mathematician_project/: pyproject.toml
scaffolding_approach_examples/mathematician_project/src/mathematician_project/: crew.py  main.py
scaffolding_approach_examples/snowflake_mcp_demo/: .env.example  .gitignore  README.md  pyproject.toml  sec_filings_semantic_model.yaml
scaffolding_approach_examples/snowflake_mcp_demo/output/: FDA_Salt_Substitutes_Regulatory_Impact_Report.md
scaffolding_approach_examples/snowflake_mcp_demo/src/snowflake_mcp_demo/: crew.py  main.py  snowflake_demo_config.yaml
scaffolding_approach_examples/snowflake_mcp_demo/src/snowflake_mcp_demo/config/: agents.yaml  tasks.yaml
script_approach_examples/: multiple_servers_client_demo.py  sse_client_demo.py  streamable_http_client_demo.py
servers/: hello_http_server.py  math_stdio_server.py
test_outputs/: cloudflare_answer.md  doc_answer.md  summary.md
