[project]
name = "mathematician_project"
version = "0.1.0"
description = "mathematician-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=0.47.1",
    "crewai[tools]>=0.130.0,<1.0.0",
]

[project.scripts]
mathematician_project = "mathematician_project.main:run"
run_crew = "mathematician_project.main:run"
train = "mathematician_project.main:train"
replay = "mathematician_project.main:replay"
test = "mathematician_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
