[project]
name = "snowflake_mcp_demo"
version = "0.1.0"
description = "snowflake_mcp_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0",
    "mcp>=1.11.0",
]

[project.scripts]
snowflake_mcp_demo = "snowflake_mcp_demo.main:run"
run_crew = "snowflake_mcp_demo.main:run"
train = "snowflake_mcp_demo.main:train"
replay = "snowflake_mcp_demo.main:replay"
test = "snowflake_mcp_demo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
